(Client) Añadir campo valoración del usuario

--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
@@ -20,7 +20,7 @@
                             <p class="valoracion text-center">Valoración del usuario:</p>
                         </div>
                         <div class="col-5">
-                            <app-rate-stars [isUser]="true" [stars]="3"></app-rate-stars>
+                            <app-rate-stars [isUser]="true" [stars]="round(user.rating)"></app-rate-stars>
                         </div>
                     </div>
                 </div>
