--- a/Cliente-Angular/src/app/pages/main-module/pages/edit-profile/edit-profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/edit-profile/edit-profile.component.html
@@ -14,13 +14,12 @@
             </div>
             <div class="row bgPrimario my-3 py-1">
                 <div class="col">
-                    <input type="file" (change)="saveImage();"
-                    value="Actualizar foto" id="fotoCocheInput"/>
+                    <input type="file" (change)="saveImage();" value="Actualizar foto" id="fotoCocheInput" />
                 </div>
             </div>
             <div class="row bgPrimario my-3">
                 <div class="col-12 my-2">
-                    <label for="date">Fecha de nacimiento:</label>
+                    <label [style]="(submitted && myForm['birthday'].errors) ? 'color:red;' : ''" for="date">Fecha de nacimiento:</label>
                 </div>
                 <div class="col-12 mb-2">
                     <input formControlName="birthday" type="text">
@@ -28,7 +27,7 @@
             </div>
             <div class="row bgPrimario my-3">
                 <div class="col-12 my-2">
-                    <label for="tlf">Teléfono:</label>
+                    <label [style]="(submitted && myForm['tlf'].errors) ? 'color:red;' : ''" for="tlf">Teléfono:</label>
                 </div>
                 <div class="col-12 mb-2">
                     <input formControlName="tlf" type="text">
@@ -47,7 +46,7 @@
         <div class="col-6">
             <div class="row bgPrimario m-1">
                 <div class="col-12 my-2">
-                    <label for="nombre">Nombre:</label>
+                    <label [style]="(submitted && myForm['name'].errors) ? 'color:red;' : ''" for="nombre">Nombre:</label>
                 </div>
                 <div class="col-12 mb-2">
                     <input formControlName="name" type="text">
@@ -55,7 +54,7 @@
             </div>
             <div class="row bgPrimario mt-3 m-1">
                 <div class="col-12 my-2">
-                    <label for="apellidos">Apellidos:</label>
+                    <label [style]="(submitted && myForm['surnamos'].errors) ? 'color:red;' : ''" for="apellidos">Apellidos:</label>
                 </div>
                 <div class="col-12 mb-2">
                     <input formControlName="surnamos" type="text">
@@ -71,10 +70,47 @@
             </div>
             <div class="row bgPrimario mt-3 m-1 pb-2">
                 <div class="col-12 my-2">
-                    <label for="desc">Descripción:</label>
+                    <label [style]="(submitted && myForm['desc'].errors) ? 'color:red;' : ''" for="desc">Descripción:</label>
                 </div>
                 <div class="col-12 mb-2">
                     <textarea formControlName="desc">{{user.description}}</textarea>
+                </div>
+            </div>
+        </div>
+
+        <!-- VALIDACIÓN DEL FORMULARIO -->
+        <div class="errorForm row d-flex justify-content-center" *ngIf="submitted && !editUserForm.valid">
+            Ha habido un error en los siguientes campos:
+
+            <div class="col-10 d-flex justify-content-center" *ngIf="submitted && myForm['name'].errors">
+                <div *ngIf="myForm['name'].errors['required']">
+                    *Debes escribir tu nombre
+                </div>
+            </div>
+            <div class="col-10 d-flex justify-content-center" *ngIf="submitted && myForm['surnamos'].errors">
+                <div *ngIf="myForm['surnamos'].errors['required']">
+                    *Debes escribir tus apellidos
+                </div>
+            </div>
+            <div class="col-10 d-flex justify-content-center" *ngIf="submitted && myForm['desc'].errors">
+                <div *ngIf="myForm['desc'].errors['required']">
+                    *Debes escribir una descripción
+                </div>
+            </div>
+            <div class="col-10 d-flex justify-content-center" *ngIf="submitted && myForm['birthday'].errors">
+                <div *ngIf="myForm['birthday'].errors['pattern']">
+                    *Fecha de nacimiento incorrecta ej: 00/00/0000
+                </div>
+                <div *ngIf="myForm['birthday'].errors['required']">
+                    *Debes escribir una fecha de nacimiento
+                </div>
+            </div>
+            <div class="col-10 d-flex justify-content-center" *ngIf="submitted && myForm['tlf'].errors">
+                <div *ngIf="myForm['tlf'].errors['pattern']">
+                    *Teléfono incorrecto ej: 600 000 000
+                </div>
+                <div *ngIf="myForm['tlf'].errors['required']">
+                    *Debes escribir un número de teléfono
                 </div>
             </div>
         </div>
@@ -82,10 +118,12 @@
 
     <div class="row">
         <div class="col d-flex justify-content-end">
-            <button (click)="saveChanges()" class="btn bgSecundario mt-2 mb-4">Actualizar perfil <i class="bi bi-arrow-up-circle"></i></button>
+            <button (click)="saveChanges()" class="btn bgSecundario mt-2 mb-4">Actualizar perfil <i
+                    class="bi bi-arrow-up-circle"></i></button>
         </div>
         <div class="col d-flex justify-content-start">
-            <button routerLink="/profile" class="btn outlineSecondary mt-2 mb-4">Volver <i class="bi bi-arrow-counterclockwise"></i></button>
+            <button routerLink="/profile" class="btn outlineSecondary mt-2 mb-4">Volver <i
+                    class="bi bi-arrow-counterclockwise"></i></button>
         </div>
     </div>
 
