--- a/Cliente-Angular/src/app/pages/auth-module/pages/register/register.component.html
+++ b/Cliente-Angular/src/app/pages/auth-module/pages/register/register.component.html
@@ -1,14 +1,32 @@
-<div class="container-fluid register py-4 px-5">
+<form [formGroup]="registerForm" class="container-fluid register py-4 px-5">
     <div class="row">
         <h2 class="text-center mb-3">Crear cuenta</h2>      
     </div>
     <hr>
     <div class="row mt-4">
         <div class="col-4">
-            <label for="user">Nombre de usuario:</label>
+            <label for="user">Nombre:</label>
         </div>
         <div class="col-8">
-            <input class="input" type="text" name="user" placeholder="Nombre">
+            <input class="input" type="text" formControlName="name" placeholder="Nombre">
+        </div>
+        <div class="errorForm" *ngIf="submitted && myForm['name'].errors">
+            <div *ngIf="myForm['name'].errors['required']">
+                *Debes escribir tu nombre
+            </div>
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col-4">
+            <label for="user">Apellidos:</label>
+        </div>
+        <div class="col-8">
+            <input class="input" type="text" formControlName="surnames" placeholder="Apellidos">
+        </div>
+        <div class="errorForm" *ngIf="submitted && myForm['surnames'].errors">
+            <div *ngIf="myForm['surnames'].errors['required']">
+                *Debes escribir tus apellidos
+            </div>
         </div>
     </div>
     <div class="row mt-4">
@@ -16,7 +34,15 @@
             <label for="user">Email:</label>
         </div>
         <div class="col-8">
-            <input class="input" type="text" name="email" placeholder="Email">
+            <input class="input" type="text" formControlName="email" placeholder="Email">
+        </div>
+        <div class="errorForm" *ngIf="submitted && myForm['email'].errors">
+            <div *ngIf="myForm['email'].errors['required']">
+                *Debes escribir un email
+            </div>
+            <div *ngIf="myForm['email'].errors['pattern']">
+                *Escriba un email correcto
+            </div>
         </div>
     </div>
     <div class="row my-4">
@@ -24,7 +50,12 @@
             <label for="password">Contraseña:</label>
         </div>
         <div class="col-8">
-            <input class="input" type="password" name="password" placeholder="Contraseña">
+            <input class="input" type="password" formControlName="pass" placeholder="Contraseña">
+        </div>
+        <div class="errorForm" *ngIf="submitted && myForm['pass'].errors">
+            <div *ngIf="myForm['pass'].errors['required']">
+                *Debes escribir una contraseña
+            </div>
         </div>
     </div>
     <div class="row my-4">
@@ -32,13 +63,21 @@
             <label for="password">Repetir contraseña:</label>
         </div>
         <div class="col-8">
-            <input class="input" type="password" name="password2" placeholder="Contraseña">
+            <input class="input" type="password" formControlName="repeatPass" placeholder="Repetir contraseña">
+        </div>
+        <div class="errorForm" *ngIf="submitted && myForm['repeatPass'].errors && !myForm['pass'].errors">
+            <div *ngIf="myForm['repeatPass'].errors['required']">
+                *Por favor, repita la contraseña
+            </div>
+        </div>
+        <div class="errorForm" *ngIf="submitted && !passEquals && !myForm['repeatPass'].errors">
+            *Las contraseñas no coinciden
         </div>
     </div>
 
     <div class="row my-3">
         <div class="col d-flex justify-content-center">
-            <button class="btn bgSecundario">Crear cuenta</button>
+            <button (click)="authUser()" class="btn bgSecundario">Crear cuenta</button>
         </div>
     </div>
     <hr>
@@ -47,4 +86,4 @@
             <a routerLink="/auth/login">¿Ya tienes cuenta? ¡Inicia sesión!</a>
         </div>
     </div>
-</div>
+</form>
