--- a/Cliente-Angular/src/app/pages/main-module/pages/edit-profile/edit-profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/edit-profile/edit-profile.component.html
@@ -1,7 +1,12 @@
+<div *ngIf="!user.tlf" class="mt-1 container text-center alert alert-warning">
+    Por favor, complete su información de usuario.
+  </div>
+
 <form [formGroup]="editUserForm" class="container bg-white my-3">
     <div class="row">
         <div class="col my-3">
-            <h2 class="text-center">Editar perfil</h2>
+            <h2 *ngIf="user.tlf" class="text-center">Editar perfil</h2>
+            <h2 *ngIf="!user.tlf" class="text-center">Completar perfil</h2>
         </div>
     </div>
 
@@ -22,7 +27,7 @@
                     <label [style]="(submitted && myForm['birthday'].errors) ? 'color:red;' : ''" for="date">Fecha de nacimiento:</label>
                 </div>
                 <div class="col-12 mb-2">
-                    <input formControlName="birthday" type="text">
+                    <input formControlName="birthday" type="text" placeholder="00/00/0000">
                 </div>
             </div>
             <div class="row bgPrimario my-3">
@@ -30,7 +35,7 @@
                     <label [style]="(submitted && myForm['tlf'].errors) ? 'color:red;' : ''" for="tlf">Teléfono:</label>
                 </div>
                 <div class="col-12 mb-2">
-                    <input formControlName="tlf" type="text">
+                    <input formControlName="tlf" type="text" placeholder="000 000 000">
                 </div>
             </div>
             <div class="row bgPrimario my-3">
