--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
@@ -1,8 +1,8 @@
 <div class="profile container bg-white mt-4">
     <div class="row">
         <div class="col-5 d-flex justify-content-center my-5">
-            <img src="data:image/jpg;base64,{{user.img}}"
-                alt="" class="imgProfile">
+            <img *ngIf="user.img" src="data:image/jpg;base64,{{user.img}}" class="imgProfile" alt="">
+            <img *ngIf="!user.img" src="/assets/images/defaultProfile.png" class="imgProfile" alt="">
         </div>
         <div class="col-7">
             <h2 class="text-center my-4">{{user.name}} {{user.surnames}}</h2>
@@ -29,16 +29,13 @@
     </div>
 
     <div class="row mt-4">
-        <div (click)="tabSelected = 1"
-            [class]="(tabSelected == 1) ? 'tabSelect col-4' : 'tab col-4'">
+        <div (click)="tabSelected = 1" [class]="(tabSelected == 1) ? 'tabSelect col-4' : 'tab col-4'">
             Mis libros subidos
         </div>
-        <div (click)="tabSelected = 2"
-            [class]="(tabSelected == 2) ? 'tabSelect col-4' : 'tab col-4'">
+        <div (click)="tabSelected = 2" [class]="(tabSelected == 2) ? 'tabSelect col-4' : 'tab col-4'">
             Mis intercambios
         </div>
-        <div (click)="tabSelected = 3"
-            [class]="(tabSelected == 3) ? 'tabSelect col-4' : 'tab col-4'">
+        <div (click)="tabSelected = 3" [class]="(tabSelected == 3) ? 'tabSelect col-4' : 'tab col-4'">
             Mis ventas
         </div>
     </div>
