(Client) Recibir params por QueryParams para saber cuando se ha actualizado la información de perfil

--- a/Cliente-Angular/src/app/pages/main-module/pages/edit-profile/edit-profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/edit-profile/edit-profile.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="!user.tlf" class="mt-1 container text-center alert alert-warning">
     Por favor, complete su información de usuario.
-  </div>
+</div>
 
 <form [formGroup]="editUserForm" class="container bg-white my-3">
     <div class="row">
@@ -26,7 +26,8 @@
             </div>
             <div class="row bgPrimario my-3">
                 <div class="col-12 my-2">
-                    <label [style]="(submitted && myForm['birthday'].errors) ? 'color:red;' : ''" for="date">Fecha de nacimiento:</label>
+                    <label [style]="(submitted && myForm['birthday'].errors) ? 'color:red;' : ''" for="date">Fecha de
+                        nacimiento:</label>
                 </div>
                 <div class="col-12 mb-2">
                     <input formControlName="birthday" type="text" placeholder="00/00/0000">
@@ -53,7 +54,8 @@
         <div class="col-6">
             <div class="row bgPrimario m-1">
                 <div class="col-12 my-2">
-                    <label [style]="(submitted && myForm['name'].errors) ? 'color:red;' : ''" for="nombre">Nombre:</label>
+                    <label [style]="(submitted && myForm['name'].errors) ? 'color:red;' : ''"
+                        for="nombre">Nombre:</label>
                 </div>
                 <div class="col-12 mb-2">
                     <input formControlName="name" type="text">
@@ -61,7 +63,8 @@
             </div>
             <div class="row bgPrimario mt-3 m-1">
                 <div class="col-12 my-2">
-                    <label [style]="(submitted && myForm['surnamos'].errors) ? 'color:red;' : ''" for="apellidos">Apellidos:</label>
+                    <label [style]="(submitted && myForm['surnamos'].errors) ? 'color:red;' : ''"
+                        for="apellidos">Apellidos:</label>
                 </div>
                 <div class="col-12 mb-2">
                     <input formControlName="surnamos" type="text">
@@ -77,7 +80,8 @@
             </div>
             <div class="row bgPrimario mt-3 m-1 pb-2">
                 <div class="col-12 my-2">
-                    <label [style]="(submitted && myForm['desc'].errors) ? 'color:red;' : ''" for="desc">Descripción:</label>
+                    <label [style]="(submitted && myForm['desc'].errors) ? 'color:red;' : ''"
+                        for="desc">Descripción:</label>
                 </div>
                 <div class="col-12 mb-2">
                     <textarea formControlName="desc">{{user.description}}</textarea>
