--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="changedInfo" class="mt-1 container text-center alert alert-warning">
+    Se ha actualizado la información de su perfil.
+</div>
+
 <div class="profile container bg-white mt-4">
     <div class="row">
         <div class="col-5 d-flex justify-content-center my-5">
@@ -6,8 +10,7 @@
         </div>
         <div class="col-7">
             <h2 class="text-center my-4">{{user.name}} {{user.surnames}}</h2>
-            <p>{{user.description}}
-            </p>
+            <p>{{user.description}}</p>
             <p>Correo electrónico: {{user.email}}</p>
             <p>Fecha de nacimiento: {{user.birthday}}</p>
             <div class="row">
