(Client) Enlace flotante para subir libro > profile component

--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
@@ -58,6 +58,13 @@
                 </div>
             </div>
         </div>
+
+        <a routerLink="/uploadBook">
+            <div class="upload d-flex align-items-center">
+                <p class="text mt-2">Subir un libro</p>&nbsp;
+                <i class="bi bi-plus-circle-fill"></i>
+            </div>
+        </a>
     </div>
     <div *ngIf="tabSelected == 2" class="row board">
         pues hola2
@@ -65,6 +72,4 @@
     <div *ngIf="tabSelected == 3" class="row board">
         hola 3 sin más
     </div>
-
-    <div class="upload">Subir un libro!</div>
 </div>
