--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
@@ -46,7 +46,7 @@
     <div *ngIf="tabSelected == 1" class="row board d-flex justify-content-center">
         <div class="col-6 col-sm-4 col-md-3" *ngFor="let book of uploadedBooksList">
             <div class="row bg-white">
-                <div class="col-12">
+                <div class="col-12 d-flex justify-content-center">
                     <img class="thumbnail" src="data:image/jpg;base64,{{book.img}}" alt="">
                 </div>
                 <div class="col-12">
