--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.scss
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.scss
@@ -7,7 +7,7 @@
 }
 
 .thumbnail {
-    width: 100%;
+    height: 300px;
 }
 
 .valoracion {
@@ -69,7 +69,9 @@
 a,
 a:visited {
     text-decoration: none;
-    color: black;
+    font-weight: bolder;
+    color: rgba(99, 61, 16, 1);
+    -webkit-text-stroke: 0.25px white;
 }
 
 a:hover {
