--- a/Cliente-Angular/src/app/pages/main-module/pages/upload-book/upload-book.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/upload-book/upload-book.component.html
@@ -20,7 +20,8 @@
             </div>
             <div class="row bgPrimario my-3">
                 <div class="col-12 my-2">
-                    <label for="titulo">Precio:</label>
+                    <label [style]="(submitted && myForm['price'].errors) ? 'color:red;' : ''"
+                        for="titulo">Precio:</label>
                 </div>
                 <div class="col-12 mb-2">
                     <input formControlName="price" type="text">
@@ -31,7 +32,8 @@
         <div class="col-6">
             <div class="row bgPrimario m-1">
                 <div class="col-12 my-2">
-                    <label for="titulo">Título:</label>
+                    <label [style]="(submitted && myForm['title'].errors) ? 'color:red;' : ''"
+                        for="titulo">Título:</label>
                 </div>
                 <div class="col-12 mb-2">
                     <input formControlName="title" type="text">
@@ -39,7 +41,8 @@
             </div>
             <div class="row bgPrimario mt-3 m-1">
                 <div class="col-12 my-2">
-                    <label for="autor">Autor:</label>
+                    <label [style]="(submitted && myForm['author'].errors) ? 'color:red;' : ''"
+                        for="autor">Autor:</label>
                 </div>
                 <div class="col-12 mb-2">
                     <input formControlName="author" type="text" name="autor" id="autor">
@@ -47,7 +50,8 @@
             </div>
             <div class="row bgPrimario mt-3 m-1">
                 <div class="col-12 my-2">
-                    <label for="desc">Una breve descripción:</label>
+                    <label [style]="(submitted && myForm['description'].errors) ? 'color:red;' : ''" for="desc">Una
+                        breve descripción:</label>
                 </div>
                 <div class="col-12 mb-2">
                     <textarea formControlName="description"></textarea>
@@ -56,7 +60,7 @@
 
             <div class="row bgPrimario mt-3 m-1">
                 <div class="col-12 my-2">
-                    <label for="autor">Estado:</label>
+                    <label [style]="(submitted && !stars) ? 'color:red;' : ''" for="autor">Estado:</label>
                 </div>
                 <div class="col-12 mb-2 d-flex justify-content-center">
                     <div class="valorador row bg-white">
@@ -81,9 +85,53 @@
         </div>
     </form>
 
+    <div class="errorForm row d-flex justify-content-center mb-3" *ngIf="submitted && !uploadBookForm.valid">
+        <div class="col-12 d-flex justify-content-center">
+            <h5>Ha habido un error en los siguientes campos:</h5>
+        </div>
+
+        <div class="col-12 col-sm-6 d-flex justify-content-center" *ngIf="submitted && myForm['title'].errors">
+            <div *ngIf="myForm['title'].errors['required']">
+                *Debes escribir un título para tu libro
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 d-flex justify-content-center" *ngIf="submitted && myForm['author'].errors">
+            <div *ngIf="myForm['author'].errors['required']">
+                *Debes escribir el autor de tu libro
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 d-flex justify-content-center" *ngIf="submitted && myForm['description'].errors">
+            <div *ngIf="myForm['description'].errors['required']">
+                *Debes escribir una descripción para tu libro
+            </div>
+            <div *ngIf="myForm['description'].errors['minlength']">
+                *Escribe una descripción de al menos 100 caracteres
+            </div>
+            <div *ngIf="myForm['description'].errors['maxlength']">
+                *Escribe una descripción de menos de 500 caracteres
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 d-flex justify-content-center" *ngIf="submitted && myForm['price'].errors">
+            <div *ngIf="myForm['price'].errors['required']">
+                *Debes de ponerle precio a tu libro
+            </div>
+            <div *ngIf="myForm['price'].errors['pattern']">
+                *Escribe un precio válido ej: 12.50
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 d-flex justify-content-center" *ngIf="submitted && !stars">
+            *Debes de calificar el estado de tu libro
+        </div>
+        <div class="col-12 col-sm-6 d-flex justify-content-center" *ngIf="submitted && !bookImg">
+            *Debes de subir una imagen de tu libro
+        </div>
+    </div>
+
     <div *ngIf="!idBook" class="row">
         <div class="col d-flex justify-content-center">
-            <button class="btn bgSecundario mb-4" (click)="registerBook()">Subir libro <i class="bi bi-arrow-up-circle"></i></button>
+            <button class="btn bgSecundario mb-4" (click)="registerBook()">
+                Subir libro <i class="bi bi-arrow-up-circle"></i>
+            </button>
         </div>
     </div>
     <div *ngIf="idBook" class="row d-flex justify-content-around">
