--- a/Cliente-Angular/src/app/pages/main-module/pages/upload-book/upload-book.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/upload-book/upload-book.component.html
@@ -1,7 +1,8 @@
 <div class="container bg-white my-3">
     <div class="row">
         <div class="col my-3">
-            <h2 class="text-center">Subir libro</h2>
+            <h2 *ngIf="!idBook" class="text-center">Subir libro</h2>
+            <h2 *ngIf="idBook" class="text-center">Modificar libro</h2>
         </div>
     </div>
 
@@ -24,7 +25,7 @@
                         for="titulo">Precio:</label>
                 </div>
                 <div class="col-12 mb-2">
-                    <input formControlName="price" type="text">
+                    <input [value]="book.price" formControlName="price" type="text">
                 </div>
             </div>
         </div>
@@ -36,7 +37,7 @@
                         for="titulo">Título:</label>
                 </div>
                 <div class="col-12 mb-2">
-                    <input formControlName="title" type="text">
+                    <input [value]="book.title" formControlName="title" type="text">
                 </div>
             </div>
             <div class="row bgPrimario mt-3 m-1">
@@ -45,7 +46,7 @@
                         for="autor">Autor:</label>
                 </div>
                 <div class="col-12 mb-2">
-                    <input formControlName="author" type="text" name="autor" id="autor">
+                    <input [value]="book.author" formControlName="author" type="text">
                 </div>
             </div>
             <div class="row bgPrimario mt-3 m-1">
@@ -54,7 +55,7 @@
                         breve descripción:</label>
                 </div>
                 <div class="col-12 mb-2">
-                    <textarea formControlName="description"></textarea>
+                    <textarea [value]="book.description" formControlName="description"></textarea>
                 </div>
             </div>
 
@@ -136,7 +137,8 @@
     </div>
     <div *ngIf="idBook" class="row d-flex justify-content-around">
         <div class="col-5 d-flex justify-content-end mb-4">
-            <button class="btn bgSecundario">Actualizar libro <i class="bi bi-arrow-repeat"></i></button>
+            <button (click)="modifyBook()" class="btn bgSecundario">Actualizar libro <i
+                    class="bi bi-arrow-repeat"></i></button>
         </div>
         <div class="col-5 d-flex justify-content-start mb-4">
             <button class="btn outlineSecondary">Eliminar libro <i class="bi bi-trash"></i></button>
