--- a/Cliente-Angular/src/app/pages/main-module/pages/upload-book/upload-book.component.scss
+++ b/Cliente-Angular/src/app/pages/main-module/pages/upload-book/upload-book.component.scss
@@ -17,6 +17,8 @@ textarea {
     height: 14vw;
     border: none;
     resize: none;
+    padding-top: 5px;
+    padding-left: 15px;
 }
 
 .valorador {
