--- a/Cliente-Angular/src/app/pages/main-module/pages/upload-book/upload-book.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/upload-book/upload-book.component.html
@@ -153,7 +153,7 @@
                     class="bi bi-arrow-repeat"></i></button>
         </div>
         <div class="col-4 d-flex justify-content-start mb-4">
-            <button class="btn outlineSecondary">Volver <i class="bi bi-arrow-counterclockwise"></i></button>
+            <button (click)="goBack()" class="btn outlineSecondary">Volver <i class="bi bi-arrow-counterclockwise"></i></button>
         </div>
     </div>
 
