(Client) Solución provisional modificar libro > upload book component --provisional

--- a/Cliente-Angular/src/app/pages/main-module/pages/upload-book/upload-book.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/upload-book/upload-book.component.html
@@ -29,7 +29,7 @@
                         for="titulo">Precio:</label>
                 </div>
                 <div class="col-12 mb-2">
-                    <input [value]="book.price" formControlName="price" type="text">
+                    <input formControlName="price" type="text">
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
                         for="titulo">Título:</label>
                 </div>
                 <div class="col-12 mb-2">
-                    <input [value]="book.title" formControlName="title" type="text">
+                    <input formControlName="title" type="text">
                 </div>
             </div>
             <div class="row bgPrimario mt-3 m-1">
@@ -50,7 +50,7 @@
                         for="autor">Autor:</label>
                 </div>
                 <div class="col-12 mb-2">
-                    <input [value]="book.author" formControlName="author" type="text">
+                    <input formControlName="author" type="text">
                 </div>
             </div>
             <div class="row bgPrimario mt-3 m-1">
@@ -59,7 +59,7 @@
                         breve descripción:</label>
                 </div>
                 <div class="col-12 mb-2">
-                    <textarea [value]="book.description" formControlName="description"></textarea>
+                    <textarea formControlName="description"></textarea>
                 </div>
             </div>
 
