(Client) Eliminar libro > upload book component

--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
@@ -1,6 +1,9 @@
 <div *ngIf="changedInfo" class="mt-1 container text-center alert alert-warning">
     Se ha actualizado la información de su perfil.
 </div>
+<div *ngIf="deletedBook" class="mt-1 container text-center alert alert-warning">
+    Se ha eliminado un libro.
+</div>
 
 <div class="profile container bg-white mt-4">
     <div class="row">
