--- a/Cliente-Angular/src/app/pages/main-module/pages/upload-book/upload-book.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/upload-book/upload-book.component.html
@@ -146,7 +146,7 @@
     </div>
     <div *ngIf="idBook" class="row d-flex justify-content-around">
         <div class="col-4 d-flex justify-content-end mb-4">
-            <button class="btn outlineSecondary">Eliminar libro <i class="bi bi-trash"></i></button>
+            <button (click)="deleteBook()" class="btn outlineSecondary">Eliminar libro <i class="bi bi-trash"></i></button>
         </div>
         <div class="col-4 d-flex justify-content-center mb-4">
             <button (click)="modifyBook()" class="btn bgSecundario">Actualizar libro <i
