--- a/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.html
@@ -23,11 +23,11 @@
     </div>
 
     <div class="row">
-        <div class="col-4" *ngFor="let i of [1,2,3,4,5,6]">
-            <img src="/assets/images/ElImperioFinal.jpg" class="cover" alt="">
+        <div class="col-4" *ngFor="let book of bookList">
+            <img src="data:image/jpg;base64,{{book.img}}" class="cover" alt="">
             <div class="row">
                 <div class="col-12 mt-3">
-                    <h4 class="text-center">El Imperio Final</h4>
+                    <h4 class="text-center">{{book.title}}</h4>
                 </div>
                 <div class="col-12">
                     <div class="row">
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div class="co-12 d-flex justify-content-center">
-                    <button [routerLink]="'/productView/'+i" class="btn bgSecundario mb-4">Ver libro</button>
+                    <button [routerLink]="'/productView/' + book.id" class="btn bgSecundario mb-4">Ver libro</button>
                 </div>
             </div>
         </div>
