--- a/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.html
@@ -22,21 +22,22 @@
         <h3 class="text-center my-4">Todos nuestros libros</h3>
     </div>
 
-    <div class="row">
-        <div class="col-4" *ngFor="let book of bookList">
-            <img src="data:image/jpg;base64,{{book.img}}" class="cover" alt="">
+    <div class="row d-flex justify-content-center">
+        <div class="col-4" *ngFor="let book of bookList; let i = index">
             <div class="row">
+                <div class="col-12 d-flex justify-content-center">
+                    <img src="data:image/jpg;base64,{{book.img}}" class="cover" alt="">
+                </div>
                 <div class="col-12 mt-3">
                     <h4 class="text-center">{{book.title}}</h4>
                 </div>
                 <div class="col-12">
                     <div class="row">
                         <div class="col-8 d-flex align-items-center justify-content-center">
-                            <p class="text-center">Jorge Montes Colorín</p>
+                            <p class="text-center">{{userList[i].name}} {{userList[i].surnames}}</p>
                         </div>
                         <div class="col-4 d-flex justify-content-center">
-                            <img src="https://images.unsplash.com/photo-1504593811423-6dd665756598?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
-                                class="imgProfile" alt="">
+                            <img src="data:image/jpg;base64,{{userList[i].img}}" class="imgProfile" alt="">
                         </div>
                     </div>
                 </div>
