(Client) Obtener todos los libros cuando no hay usuario autenticado > product component

--- a/Cliente-Angular/src/app/components/navbar/navbar.component.html
+++ b/Cliente-Angular/src/app/components/navbar/navbar.component.html
@@ -12,8 +12,11 @@
         <li *ngIf="user.name" class="nav-item ms-4">
           <a class="nav-link" routerLink="/profile">Mis libros</a>
         </li>
-        <li *ngIf="user.name" class="nav-item mx-3">
+        <li *ngIf="user.name" class="nav-item ms-4">
           <a class="nav-link" routerLink="/uploadBook">Subir libro</a>
+        </li>
+        <li class="nav-item ms-4">
+          <a class="nav-link" routerLink="/products">Catálogo</a>
         </li>
       </ul>
     </div>
