--- a/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.html
@@ -33,10 +33,10 @@
                 </div>
                 <div class="col-12">
                     <div class="row">
-                        <div class="col-8 d-flex align-items-center justify-content-center">
+                        <div class="col-8 d-flex align-items-center justify-content-end">
                             <p class="text-center">{{userList[i].name}} {{userList[i].surnames}}</p>
                         </div>
-                        <div class="col-4 d-flex justify-content-center">
+                        <div class="col-4 d-flex justify-content-start">
                             <img src="data:image/jpg;base64,{{userList[i].img}}" class="imgProfile" alt="">
                         </div>
                     </div>
