(Client) Botón de ScrollUp > products component

--- a/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.html
@@ -48,3 +48,9 @@
         </div>
     </div>
 </div>
+<!-- [class]="showScrollButton ? 'appear' : 'disappear'"  -->
+<span (window:scroll)="showScrollUp()" (click)="scrollUp()">
+    <div *ngIf="showScrollButton" class="up d-flex justify-content-center align-items-center">
+        <i class="bi bi-chevron-compact-up"></i>
+    </div>
+</span>
