--- a/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.scss
+++ b/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.scss
@@ -19,7 +19,29 @@ input {
 }
 
 .imgProfile {
-        width:60px;
-        height:60px;
-        border-radius:150px;
+    width: 60px;
+    height: 60px;
+    border-radius: 150px;
+}
+
+.up {
+    position: fixed;
+    top: 500px;
+    right: 80px;
+    width: 50px;
+    height: 50px;
+    z-index: 999;
+    background-color: rgba(99, 61, 16, 1);
+    border-radius: 25px;
+    cursor: pointer;
+
+    :hover {
+        transform: scale(1.3);
+        transition: all 300ms ease;
+    }
+
+    i {
+        color: white;
+        font-size: 30px;
+    }
 }
