(Client) Mostrar datos del libro y usuario dueño > product view component

--- a/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="co-12 d-flex justify-content-center">
-                    <button [routerLink]="'/productView/' + book.id" class="btn bgSecundario mb-4">Ver libro</button>
+                    <button [routerLink]="'/productView/' + book.id + '/' + userList[i].id" class="btn bgSecundario mb-4">Ver libro</button>
                 </div>
             </div>
         </div>
