--- a/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-4">
     <div class="row book">
         <div class="col-4 bgPrimario colImg">
-            <img src="/assets/images/ElImperioFinal.jpg" class="mt-3 cover" alt="">
+            <img src="data:image/jpg;base64,{{book.img}}" class="mt-3 cover" alt="">
             <p class="text-center mt-3">Comparte el libro con tus amigos</p>
             <div class="d-flex justify-content-around mb-3">
                 <i class="bi bi-twitter"></i>
@@ -11,20 +11,17 @@
         </div>
         <div class="col-8 pt-5 px-5">
             <div class="row">
-                <h3 class="bold">Brandon Sanderson: El Imperio Final</h3>
+                <h3 class="bold">{{book.author}}: {{book.title}}</h3>
 
                 <p class="mt-4 bold">Descripción:</p>
-                <p>Se trata de una novela de fantasía escrita por el famoso escritor estadounidense Brandon Sanderson.
-                    Se vende por falta de espacio en la estantería. Tan sólo se ha leído una vez por lo tanto se
-                    encuentra en muy buen estado.
-                </p>
+                <p>{{book.description}}</p>
             </div>
             <div class="row mt-4">
                 <div class="col-8">
                     <h6 class="bold">Estado:</h6>
-                    <app-rate-stars [stars]="2"></app-rate-stars>
+                    <app-rate-stars [stars]="book.state"></app-rate-stars>
                 </div>
-                <app-price [price]="12" class="col-4"></app-price>
+                <app-price [price]="book.price" class="col-4"></app-price>
             </div>
 
             <div class="row mt-4">
@@ -59,7 +56,7 @@
         <div class="col-7 bg-white profile">
             <div class="row">
                 <div class="col-7 mt-4">
-                    <h3 class="text-center bold">Jorge Montes Colorín</h3>
+                    <h3 class="text-center bold">{{user.name}} {{user.surnames}}</h3>
                     <p class="d-flex justify-content-end mt-3">8 productos</p>
                     <p class="d-flex justify-content-end mt-3"><span class="bold">Ubicación: &nbsp;</span> Albendín
                         (Córdoba)</p>
@@ -75,7 +72,7 @@
                     <div class="row">
                         <div class="col-12 d-flex align-items-center">
                             <img class="imgProfile mt-5"
-                                src="https://images.unsplash.com/photo-1504593811423-6dd665756598?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                                src="data:image/jpg;base64,{{user.img}}"
                                 alt="">
                         </div>
                         <div class="col-12 d-flex justify-content-center">
