(Client) Algunos arreglos de diseño > Product component & Product view

--- a/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
@@ -1,9 +1,11 @@
 <div class="container mt-4">
     <div class="row book">
         <div class="col-4 bgPrimario colImg">
-            <img src="data:image/jpg;base64,{{book.img}}" class="mt-3 cover" alt="">
+            <div class="d-flex justify-content-center">
+                <img src="data:image/jpg;base64,{{book.img}}" class="mt-3 cover" alt="">
+            </div>
             <p class="text-center mt-3">Comparte el libro con tus amigos</p>
-            <div class="d-flex justify-content-around mb-3">
+            <div class="d-flex justify-content-around mb-3 share">
                 <i class="bi bi-twitter"></i>
                 <i class="bi bi-facebook"></i>
                 <i class="bi bi-whatsapp"></i>
