--- a/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.scss
+++ b/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.scss
@@ -10,7 +10,6 @@
 
 .cover {
     height: 26vw;
-    width: 26vw;
 }
 
 .imgMini {
@@ -37,4 +36,8 @@
 .profile {
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
+}
+
+.share .bi {
+    font-size: 22px !important;
 }
