--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.scss
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.scss
@@ -82,6 +82,10 @@ a:hover {
     color: rgba(211, 149, 75, 1);
 }
 
-i {
-    font-size: 17px !important;
+button i {
+    font-size: 18px
+}
+
+.justUploaded {
+    border-radius: 15px;
 }
