--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
@@ -85,7 +85,7 @@
     <ng-template #justUploaded>
         <div class="row board d-flex justify-content-center justUploaded">
             <div class="text-center text-white my-2">
-                <h3>Sus libros subidos</h3>
+                <h3>Libros subidos</h3>
             </div>
             <div class="col-6 col-sm-4 col-md-3" *ngFor="let book of uploadedBooksList">
                 <div class="row bg-white">
